--- a/springboot-mall/pom.xml
+++ b/springboot-mall/pom.xml
@@ -46,11 +46,14 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
+			<version>2.2.224</version> <!-- 這是穩定可用的版本 -->
 			<scope>runtime</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
+			<version>9.1.0</version> <!-- 建議明確指定 -->
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
