--- a/springboot-mall/src/main/resources/application.properties
+++ b/springboot-mall/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.application.name=springboot-mall
 spring.datasource.url=jdbc:mysql://localhost:3306/mall?serverTimezone=Asia/Taipei&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=abc123
-
+spring.jackson.time-zone=GMT+8
+spring.jackson.date-format=yyyy-MM-DD HH:mm:ss
