--- a/springboot-mall/src/main/resources/application.properties
+++ b/springboot-mall/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/mall?serverTimezone=Asia/Taipe
 spring.datasource.username=root
 spring.datasource.password=abc123
 spring.jackson.time-zone=GMT+8
-spring.jackson.date-format=yyyy-MM-DD HH:mm:ss
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
